# catt-ccs

./: .gitignore  README.md  catt_ccs.bib  catt_ccs.tex  pyproject.toml
benchmarks/cicids2017/: colab_ccs.ipynb  run_ccs.py
benchmarks/nsl_kdd/: colab_ccs.ipynb  run_ccs.py
benchmarks/unsw_nb15/: colab_ccs.ipynb  run_ccs.py
netadv/attacks/: base.py  fgsm.py  pgd.py  transfer.py
netadv/classifiers/: sklearn_wrap.py
netadv/constraints/: bounds.py  spec.py
netadv/constraints/datasets/: cicids2017.py  nsl_kdd.py  unsw_nb15.py
netadv/eval/: calibration.py  curves.py  metrics.py
tests/: test_attacks.py  test_constraints.py  test_transfer.py
