[build-system]
requires      = ["setuptools>=68", "wheel"]
build-backend = "setuptools.backends.legacy:build"

[project]
name        = "netadv-ccs"
version     = "0.2.0"
description = "Domain-constrained adversarial attacks for NIDS — CCS extended version"
readme      = "README.md"
requires-python = ">=3.9"

dependencies = [
    "numpy>=1.24",
    "pandas>=2.0",
    "scikit-learn>=1.3",
    "torch>=2.0",
]

[project.optional-dependencies]
xgb   = ["xgboost>=2.0"]
plots = ["matplotlib>=3.7"]
dev   = ["pytest>=7", "pytest-cov"]
all   = ["netadv-ccs[xgb,plots,dev]"]

[project.urls]
Repository = "[anonymous repository — restored at camera-ready]"

[tool.setuptools.packages.find]
where   = ["."]
include = ["netadv*"]
